--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "fs": "0.0.1-security",
+    "node-fetch": "^3.3.1",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.2.0"
   }
 }
