A dumb ass update done ditch all the http shit

--- a/entry/src/main/config.json
+++ b/entry/src/main/config.json
@@ -29,9 +29,16 @@
       {
         "pages": [
           "pages/index/index",
-          "pages/weather/weather"
+          "pages/launcher/launcher",
+          "pages/test/test"
         ],
         "name": "default"
+      }
+    ],
+    "reqPermissions": [
+      {
+        "reason": "",
+        "name": "ohos.permission.INTERNET"
       }
     ]
   }
