Watch swipe down Launcher

--- a/entry/src/main/config.json
+++ b/entry/src/main/config.json
@@ -30,6 +30,7 @@
         "pages": [
           "pages/index/index",
           "pages/launcher/launcher",
+          "pages/weather/weather",
           "pages/test/test"
         ],
         "name": "default"
