--- a/entry/src/main/config.json
+++ b/entry/src/main/config.json
@@ -31,7 +31,8 @@
           "pages/index/index",
           "pages/launcher/launcher",
           "pages/weather/weather",
-          "pages/test/test"
+          "pages/test/test",
+          "pages/info/info"
         ],
         "name": "default"
       }
