--- a/entry/src/main/config.json
+++ b/entry/src/main/config.json
@@ -31,6 +31,7 @@
           "pages/index/index",
           "pages/launcher/launcher",
           "pages/weather/weather",
+          "pages/terminal/terminal",
           "pages/info/info"
         ],
         "name": "default"
